{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 737,
  "lineage": "4de2f91c-f3fd-896c-43fb-ed150d5f6a30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0455cffb6335a0362",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:elastic-ip/eipalloc-0455cffb6335a0362",
            "domain": "vpc",
            "id": "eipalloc-0455cffb6335a0362",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-20-213-4.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.213.4",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04542995864e26699",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-0c32ef1185008761e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c32ef1185008761e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mtardio-tp07-ex01-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea17c5c4ab98c1e6",
            "private_dns": "ip-10-0-4-224.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.224",
            "public_dns": "ec2-13-53-95-141.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.95.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "mtardio-tp07-ex01",
                  "Owner": "mtardio"
                },
                "tags_all": {
                  "Name": "mtardio-tp07-ex01",
                  "Owner": "mtardio"
                },
                "throughput": 0,
                "volume_id": "vol-016375d26d3ecd152",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab81fe0f7e2199fe",
            "tags": {
              "Name": "mtardio-tp07-ex01-bastion"
            },
            "tags_all": {
              "Name": "mtardio-tp07-ex01-bastion",
              "Owner": "mtardio"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f71ae708329d1f5"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04542995864e26699",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-00a451164ccd95fba",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a451164ccd95fba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mtardio-tp07-ex01-nextcloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0f4dba939e7deb9",
            "private_dns": "ip-10-0-1-150.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "mtardio-tp07-ex01",
                  "Owner": "mtardio"
                },
                "tags_all": {
                  "Name": "mtardio-tp07-ex01",
                  "Owner": "mtardio"
                },
                "throughput": 0,
                "volume_id": "vol-0d0b62ed5bfee9916",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4b597660648817c",
            "tags": {
              "Name": "mtardio-tp07-ex01-nextcloud"
            },
            "tags_all": {
              "Name": "mtardio-tp07-ex01-nextcloud",
              "Owner": "mtardio"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0996f4f639c233d82"
            ]
          },
          "dependencies": [
            "aws_db_instance.nextcloud_db",
            "aws_db_subnet_group.nextcloud_db_subnet_group",
            "aws_efs_file_system.nextcloud_efs",
            "aws_eip.nat",
            "aws_key_pair.nextcloud",
            "aws_lb.nextcloud",
            "aws_nat_gateway.nat",
            "aws_route53_record.nextcloud",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb",
            "aws_security_group.nextcloud",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_route53_zone.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:internet-gateway/igw-01bec490957b94af0",
            "id": "igw-01bec490957b94af0",
            "owner_id": "134400125759",
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/nextcloud-alb-mtardio/b51a141adffcdc29",
            "arn_suffix": "app/nextcloud-alb-mtardio/b51a141adffcdc29",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nextcloud-alb-mtardio-1201160698.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/nextcloud-alb-mtardio/b51a141adffcdc29",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nextcloud-alb-mtardio",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00b5158017273888e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ab81fe0f7e2199fe"
              },
              {
                "subnet_id": "subnet-0e015c055624c3555"
              },
              {
                "subnet_id": "subnet-0e86a952f6ae8863c"
              }
            ],
            "subnets": [
              "subnet-0ab81fe0f7e2199fe",
              "subnet-0e015c055624c3555",
              "subnet-0e86a952f6ae8863c"
            ],
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "vpc_id": "vpc-01a77ff6c34c8b9f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/nextcloud-alb-mtardio/b51a141adffcdc29/f5ad66e6d222733a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-mtardio/801f050ef30ecb52",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/nextcloud-alb-mtardio/b51a141adffcdc29/f5ad66e6d222733a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/nextcloud-alb-mtardio/b51a141adffcdc29",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-mtardio/801f050ef30ecb52",
            "arn_suffix": "targetgroup/nextcloud-mtardio/801f050ef30ecb52",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 38,
                "matcher": "200",
                "path": "/status.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-mtardio/801f050ef30ecb52",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nextcloud-mtardio",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-mtardio/801f050ef30ecb52-2025031708335701930000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-mtardio/801f050ef30ecb52",
            "target_id": "i-00a451164ccd95fba"
          },
          "dependencies": [
            "aws_db_instance.nextcloud_db",
            "aws_db_subnet_group.nextcloud_db_subnet_group",
            "aws_efs_file_system.nextcloud_efs",
            "aws_eip.nat",
            "aws_instance.nextcloud",
            "aws_key_pair.nextcloud",
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_nat_gateway.nat",
            "aws_route53_record.nextcloud",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb",
            "aws_security_group.nextcloud",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_route53_zone.training"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0455cffb6335a0362",
            "association_id": "eipassoc-064e7a7770783381c",
            "connectivity_type": "public",
            "id": "nat-0fd3bc99bc78dc4ad",
            "network_interface_id": "eni-0327e6da99fc2fea1",
            "private_ip": "10.0.4.123",
            "public_ip": "51.20.213.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ab81fe0f7e2199fe",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway",
              "Owner": "mtardio"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0bbf52b2d50aedd2c",
            "id": "rtb-0bbf52b2d50aedd2c",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd3bc99bc78dc4ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-066104d2dbf77a5d4",
            "id": "rtb-066104d2dbf77a5d4",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bec490957b94af0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0568c65b171a817b0",
            "route_table_id": "rtb-0bbf52b2d50aedd2c",
            "subnet_id": "subnet-0e4b597660648817c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047895b3918180898",
            "route_table_id": "rtb-0bbf52b2d50aedd2c",
            "subnet_id": "subnet-07a52f7c07aced071"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01315efcfec51c4c2",
            "route_table_id": "rtb-0bbf52b2d50aedd2c",
            "subnet_id": "subnet-0cfb69d5f23d3a36a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5810e28eb334344",
            "route_table_id": "rtb-066104d2dbf77a5d4",
            "subnet_id": "subnet-0ab81fe0f7e2199fe"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de3d4514c0eb3488",
            "route_table_id": "rtb-066104d2dbf77a5d4",
            "subnet_id": "subnet-0e015c055624c3555"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ecf1b8e1fac450c",
            "route_table_id": "rtb-066104d2dbf77a5d4",
            "subnet_id": "subnet-0e86a952f6ae8863c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-00b5158017273888e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b5158017273888e",
            "ingress": [
              {
                "cidr_blocks": [
                  "80.9.122.145/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250317082945498700000003",
            "name_prefix": "terraform-",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-07f71ae708329d1f5",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-07f71ae708329d1f5",
            "ingress": [],
            "name": "terraform-20250317082945494800000002",
            "name_prefix": "terraform-",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0996f4f639c233d82",
            "description": "Allow SSH inbound traffic from bastion",
            "egress": [],
            "id": "sg-0996f4f639c233d82",
            "ingress": [],
            "name": "terraform-20250317082945503200000004",
            "name_prefix": "terraform-",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0e4b597660648817c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4b597660648817c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-north-1a"
            },
            "tags_all": {
              "Name": "private-subnet-eu-north-1a",
              "Owner": "mtardio"
            },
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-07a52f7c07aced071",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a52f7c07aced071",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-north-1b"
            },
            "tags_all": {
              "Name": "private-subnet-eu-north-1b",
              "Owner": "mtardio"
            },
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0cfb69d5f23d3a36a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfb69d5f23d3a36a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-north-1c"
            },
            "tags_all": {
              "Name": "private-subnet-eu-north-1c",
              "Owner": "mtardio"
            },
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0ab81fe0f7e2199fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab81fe0f7e2199fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-north-1a"
            },
            "tags_all": {
              "Name": "public-subnet-eu-north-1a",
              "Owner": "mtardio"
            },
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0e015c055624c3555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e015c055624c3555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-north-1b"
            },
            "tags_all": {
              "Name": "public-subnet-eu-north-1b",
              "Owner": "mtardio"
            },
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0e86a952f6ae8863c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e86a952f6ae8863c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-north-1c"
            },
            "tags_all": {
              "Name": "public-subnet-eu-north-1c",
              "Owner": "mtardio"
            },
            "vpc_id": "vpc-01a77ff6c34c8b9f7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:vpc/vpc-01a77ff6c34c8b9f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be5490d5c5bcdb75",
            "default_route_table_id": "rtb-0664f058c205c4141",
            "default_security_group_id": "sg-0e4f369665752c443",
            "dhcp_options_id": "dopt-84fa2ded",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a77ff6c34c8b9f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0664f058c205c4141",
            "owner_id": "134400125759",
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-096a2fd19c19ceff6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-096a2fd19c19ceff6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0996f4f639c233d82",
            "security_group_rule_id": "sgr-096a2fd19c19ceff6",
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-08491e380a7053997",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08491e380a7053997",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07f71ae708329d1f5",
            "security_group_rule_id": "sgr-08491e380a7053997",
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_HTTP_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0b1161d9bb4eb07c5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b1161d9bb4eb07c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00b5158017273888e",
            "security_group_id": "sg-0996f4f639c233d82",
            "security_group_rule_id": "sgr-0b1161d9bb4eb07c5",
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nextcloud",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_NFS_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-05d6334e6cb4239d6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-05d6334e6cb4239d6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0996f4f639c233d82",
            "security_group_id": "sg-0996f4f639c233d82",
            "security_group_rule_id": "sgr-05d6334e6cb4239d6",
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_RDS_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-047478f7ce52c32fd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-047478f7ce52c32fd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0996f4f639c233d82",
            "security_group_id": "sg-0996f4f639c233d82",
            "security_group_rule_id": "sgr-047478f7ce52c32fd",
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_SSH_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-05084bc1349acc361",
            "cidr_ipv4": "15.237.202.249/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05084bc1349acc361",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07f71ae708329d1f5",
            "security_group_rule_id": "sgr-05084bc1349acc361",
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_SSH_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-044e76fc6ab0977fa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-044e76fc6ab0977fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07f71ae708329d1f5",
            "security_group_id": "sg-0996f4f639c233d82",
            "security_group_rule_id": "sgr-044e76fc6ab0977fa",
            "tags": null,
            "tags_all": {
              "Name": "mtardio-tp07-ex01",
              "Owner": "mtardio"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.nextcloud",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}